# StrongInteger

./: .clang-format  .gitignore  CMakeLists.txt  strong_int_test.cpp  strong_integer.h
